--- a/rapport/input/Introduction.tex
+++ b/rapport/input/Introduction.tex
@@ -1,2 +1,11 @@
 \pagenumbering{arabic}
 \chapter{Introduction}
+
+À l'ère du \textit{Big Data}, la majorité des applications informatiques recueillent des quantités importantes de données au sein de leurs bases. La problématique de la valorisation de ces données entre alors en compte. Cette valorisation passe dans un premier en la création d'une application serveur pouvant communiquer avec la base, puis en l'exposition des méthodes de cette application pour que des applications clientes puissent interagir avec la base de données.
+L'utilisation de \textit{web service} permet de rendre l'application disponible n'importe où et permet une pluralité des applications clientes pouvant communiquer avec le serveur.
+
+Le travail demandé ici est de mettre en valeur une base de données par la création de web services et d'une application cliente pouvant communiquer avec ceux-ci.
+
+La création de \textit{web services} à partir de rien peut être une tâche complexe. Pour faciliter ce travail, l'utilisation d'API est conseillée. Ici, nous nous baserons sur les API du \textit{Google App Engine} pour la création des web services. Enfin, nous pourrons déployer notre application dans le \textit{Cloud} de Google.
+
+Dans ce rapport, nous verrons dans un premier temps la structure de la base à valoriser. Dans un deuxième temps, nous verrons l'analyse et la réalisation de l'application serveur et les \textit{web services} exposés. Ensuite, nous expliquerons le choix effectué pour l'application cliente et expliquerons la structure et le fonctionnement de celle-ci. Enfin, nous verrons les résultats et les tests effectués.
