Modification noms auteurs

--- a/rapport/config/Configuration.tex
+++ b/rapport/config/Configuration.tex
@@ -5,7 +5,7 @@
 \newcommand{\titreRapport}{Rapport d'intégration d'application}
 \newcommand{\sousTitreRapport}{Valorisation d'une base de données avec Google App Engine et client web}
 \newcommand{\filiere}{Filière Génie Logiciel et Systèmes Informatiques}
-\newcommand{\noms}{Antoine \textsc{Colmard} et Nicolas Prugne}
+\newcommand{\noms}{Antoine \textsc{Colmard} et Nicolas \textsc{Prugne}}
 \newcommand{\ecole}{\small{
 	\textsc{Institut Supérieur d'Informatique \\de Modélisation et de leurs Applications}\\[0.5em]
 	Campus des Cézeaux \\
