--- a/rapport/input/Serveur.tex
+++ b/rapport/input/Serveur.tex
@@ -30,9 +30,9 @@ Heureusement pour les développeurs Java EE, il existe une API pour mapper les a
 
 Pour ce faire, il faut commencer par indiquer quelles méthodes vont être mappées à des requêtes SOAP. Ainsi, il faut placer des annotations devant les méthodes de la classe \verb|BiblioService| pour déclarer concrètement quelles vont être ces méthodes.
 
-Puis, une fois que ces marqueurs ont été placés devant toutes les méthodes à exposer, il faut se servir l’utilitaire \verb|wsgen|. Ce dernier automatise la création de classes appelées artefacts. Elles décrivent en Java les prototypes des méthodes du service web et leurs types de retour. L’API JAX-WS permet ensuite en quelques lignes de transformer une requête SOAP en l’un de ces artefacts. Les artefacts sont ensuite directement manipulables, via du code Java, afin de transmettre les appels SOAP, avec leurs paramètres, aux méthodes du web service.
+Puis, une fois que ces marqueurs ont été placés devant toutes les méthodes à exposer, il faut se servir l’utilitaire \verb|wsgen|. Ce dernier automatise la création de classes appelées artefacts. Elles décrivent en Java les prototypes des méthodes du service web et leurs types de retour. L’API JAX-WS permet ensuite en quelques lignes de transformer une requête SOAP en l’un de ces artefacts. Les artefacts sont ensuite directement manipulables, via du code Java, afin de transmettre les appels SOAP, avec leurs paramètres, aux méthodes du web service. Au passage, wsgen permet aussi de générer les fichiers WSDL et XSD du service web. Ces deux fichiers sont essentiels puisqu'ils permettent d'exposer les messages SOAP (correspondant à des appels de méthodes) que le serveur va pouvoir traiter. Lorsqu'un client se connecte au serveur, il consulte ces fichiers, et sait directement comment dialoguer avec le serveur.
 
-Bien entendu, avant de transmettre ces requêtes à la classe \verb|BiblioService|, un processus de traitement est nécessaire afin de créer les bons artefacts et de les transmettre aux bonnes méthodes du service web. A l’origine, le serveur Java EE utilisé pour l’application ne sait rien faire d’autre que transmettre les requêtes HTTP qu’il reçoit aux servlets qu’il contient. Il est donc nécessaire d’adapter ce dernier au traitement de requêtes SOAP.
+Néanmoins, la simple mise en place du fichier WSDL et la création des artefacts ne suffisent pas pour qu'un client puisse dialoguer avec le serveur. Un processus de traitement est nécessaire afin de transformer les requêtes SOAP, reçues depuis un client, en artefacts correspondant à l'appel d'une des méthodes du web service. A l’origine, le serveur Java EE utilisé pour l’application ne sait rien faire d’autre que transmettre les requêtes HTTP qu’il reçoit aux servlets qu’il contient. Il est donc nécessaire d’adapter ce dernier au traitement de requêtes SOAP.
 
 Ainsi, ce mécanisme repose principalement sur deux classes. La première baptisée \verb|SoapHandler| va être chargée de récupérer les requêtes SOAP bruts depuis la servlet et de les transformer en artefact correspondant à la méthode du web service à appeler.
 
