Mise à jour finale rapport

--- a/rapport/input/Conclusion.tex
+++ b/rapport/input/Conclusion.tex
@@ -1,1 +1,6 @@
 \chapter{Conclusion}
+Pour conclure, ce projet a permis de développer une application fonctionnelle permettant de mettre en valeur une base de données en utilisant le \textit{Google App Engine}.
+
+Ce projet a été source d'enseignements pour les technologies incluses dans le \textit{Google App Engine} et il a permis de mieux comprendre comment celles-ci fonctionnaient. Il a également permis de mieux appréhender certaines contraintes liées au développement, au déploiement et à l'utilisation d'application web.
+
+Enfin, il nous a permis de tester un des types de clients possibles pour une application déployé dans le cloud et la phase de réflexion sur le choix de celui-ci nous a permis de prendre en compte les avantages et inconvénients de chaque client possible.
